Fix: Ensure full address masking for multi-register instructions to prevent SIGSEGV at 0x20000000

--- a/docs/bugs/SIGSEGV_0x20000000.md
+++ b/docs/bugs/SIGSEGV_0x20000000.md
@@ -1,8 +1,41 @@
 # Bug: SIGSEGV at Fastmem Offset 0x20000000
 
-## Status: OPEN
+## Status: FIXED ✓
 
-## Symptom
+## Root Cause - IDENTIFIED
+
+The crash was caused by `compile_load_multiple` and `compile_store_multiple` (lmw/stmw instructions) not properly masking addresses when adding per-register offsets.
+
+### The Bug
+
+The code masked the BASE address to 512MB, but then added offsets that could push past the boundary:
+
+```cpp
+// BUGGY CODE
+emit.AND(arm64::X0, arm64::X0, 0x1FFFFFFF);  // Mask base to 512MB
+emit.ADD(arm64::X0, arm64::X0, fastmem_base);
+for (u32 r = inst.rd; r < 32; r++) {
+    emit.LDR(arm64::X1, arm64::X0, (r - inst.rd) * 4);  // Offset can overflow!
+}
+```
+
+When base=0x1FFFFFC0 and loading 32 registers, offset for r=16 is 64 bytes:
+`0x1FFFFFC0 + 64 = 0x20000000` → CRASH
+
+### The Fix
+
+Mask the FULL address (base + offset) for each access:
+
+```cpp
+for (u32 r = inst.rd; r < 32; r++) {
+    emit.ADD_imm(arm64::X3, arm64::X0, (r - inst.rd) * 4);
+    emit.AND(arm64::X3, arm64::X3, 0x1FFFFFFF);  // Mask full address
+    emit.ADD(arm64::X3, arm64::X3, fastmem_base);
+    emit.LDR(arm64::X1, arm64::X3);
+}
+```
+
+## Original Symptom
 
 App crashes with SIGSEGV when running Black Ops. The crash always occurs at exactly:
 ```
